--- a/HL/HL.Data/App.config
+++ b/HL/HL.Data/App.config
@@ -6,7 +6,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="NorthwindContext" connectionString="Data Source=localhost\SQLEXPRESS; Initial Catalog=HLNorthwind; Integrated Security=false; User ID = sa; Password = P@ssw0rd; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="NorthwindContextConnectionString" connectionString="Data Source=localhost\SQLEXPRESS; Initial Catalog=HLNorthwind; Integrated Security=false; User ID = sa; Password = P@ssw0rd; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
