--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /HL/HL.Services/bin/Debug
 /HL/HL.Test/bin/Debug
 /HL/packages/EntityFramework.6.1.3
+/HL/HL.Console/bin/Debug
+/HL/HL.Console/obj/Debug
