--- a/HL/HL.Test/HL.Test.csproj
+++ b/HL/HL.Test/HL.Test.csproj
@@ -64,6 +64,7 @@
     <Compile Include="NorthwindContextTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryTest.cs" />
+    <Compile Include="UnitOfWorkTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
