--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /HL/packages/EntityFramework.6.1.3
 /HL/HL.Console/bin/Debug
 /HL/HL.Console/obj/Debug
+/HL/HL.Web/bin
+/HL/HL.Web/obj/Debug
+/HL/packages
+/HL/.vs/config
